--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<center>
-		<h1>This page is in edit!</h1>
+		<div><h1>This page is in edit!</h1></div>
 	</center>
 </body>
 </html>
