--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 	<center>
-		<div><h1>This page is in edit!</h1></div>
+		<div>
+			<h1>This page is in edit!</h1>
+			<p>Some little projects I published:<br><a href="https://moviemusic1.github.io/diamondclicker/">DiamondClicker</a><br><a href="https://moviemusic1.github.io/diamondcalculator/">DiamondCalculator</a><br><a href="https://moviemusic1.github.io/millisecondtimecode/">millisecondcode</a><br><a href="https://moviemusic1.github.io/golden-timer/">Golden Timer</a></p>
+		</div>
 	</center>
 </body>
 </html>
