--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<center>
 		<div>
-			<h1>This page is in edit!</h1>
+			<h1>moviemusic1 - This page is in edit!</h1>
 			<p>Some little projects I published:<br><a href="https://moviemusic1.github.io/diamondclicker/">DiamondClicker</a><br><a href="https://moviemusic1.github.io/diamondcalculator/">DiamondCalculator</a><br><a href="https://moviemusic1.github.io/millisecondtimecode/">millisecondcode</a><br><a href="https://moviemusic1.github.io/golden-timer/">Golden Timer</a></p>
 		</div>
 	</center>
