--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<center>
 		<div>
 			<h1>moviemusic1 - This page is in edit!</h1>
-			<p>Some little projects I published:<br><a href="https://moviemusic1.github.io/diamondclicker/">DiamondClicker</a><br><a href="https://moviemusic1.github.io/diamondcalculator/">DiamondCalculator</a><br><a href="https://moviemusic1.github.io/millisecondtimecode/">millisecondcode</a><br><a href="https://moviemusic1.github.io/golden-timer/">Golden Timer</a></p>
+			<p>Some little projects I published:<br><a href="https://moviemusic1.github.io/diamondclicker/">DiamondClicker</a><br><a href="https://moviemusic1.github.io/diamondcalculator/">DiamondCalculator</a><br><a href="https://moviemusic1.github.io/millisecondtimecode/">millisecondcode</a><br><a href="https://moviemusic1.github.io/golden-timer/">Golden Timer</a><br><a href="https://moviemusic1.github.io/lifedeathoverview/">lifedeathoverview</a></p>
 		</div>
 	</center>
 </body>
