--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<center>
 		<div>
-			<h1>moviemusic1 - This page is in edit!</h1>
+			<h1>moviemusic1</h1>
 			<p>Some little projects I published:<br><br><a href="https://moviemusic1.github.io/diamondclicker/">DiamondClicker</a><br><br><a href="https://moviemusic1.github.io/diamondcalculator/">DiamondCalculator</a><br><br><a href="https://moviemusic1.github.io/millisecondtimecode/">millisecondcode</a><br><br><a href="https://moviemusic1.github.io/lifedeathoverview/">lifedeathoverview</a><br><br><a href="https://moviemusic1.github.io/rgb-color-generator/">RGB-Color-Generator</a><br><br><a href="https://moviemusic1.github.io/get_keycode/">get_keycode</a></p>
 		</div>
 	</center>
